.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:51:08 **** Incremental Build of configuration Debug for project RFC_V1 ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/Libraries/Flash.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Libraries/Flash.d" -MT"Core/Src/Libraries/Flash.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Libraries/Flash.o"
../Core/Src/Libraries/Flash.c: In function 'FLASH_cleanPage':
../Core/Src/Libraries/Flash.c:54:9: warning: implicit declaration of function 'FLASH_PageErase' [-Wimplicit-function-declaration]
   54 |         FLASH_PageErase(ucNumPage, FLASH_BANK_SELECTED);
      |         ^~~~~~~~~~~~~~~
In file included from ../Core/Inc/Libraries/Flash.h:11,
                 from ../Core/Src/Libraries/Flash.c:8:
../Core/Src/Libraries/Flash.c:55:31: error: 'FLASH_CR_PER' undeclared (first use in this function); did you mean 'FLASH_CR_SER'?
   55 |         CLEAR_BIT(FLASH->CR, (FLASH_CR_PER));
      |                               ^~~~~~~~~~~~
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:213:43: note: in definition of macro 'CLEAR_BIT'
  213 | #define CLEAR_BIT(REG, BIT)   ((REG) &= ~(BIT))
      |                                           ^~~
../Core/Src/Libraries/Flash.c:55:31: note: each undeclared identifier is reported only once for each function it appears in
   55 |         CLEAR_BIT(FLASH->CR, (FLASH_CR_PER));
      |                               ^~~~~~~~~~~~
../Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h:213:43: note: in definition of macro 'CLEAR_BIT'
  213 | #define CLEAR_BIT(REG, BIT)   ((REG) &= ~(BIT))
      |                                           ^~~
../Core/Src/Libraries/Flash.c: In function 'FLASH_write':
../Core/Src/Libraries/Flash.c:95:9: error: unknown type name 'u64_t'
   95 |         u64_t buffer;
      |         ^~~~~
../Core/Src/Libraries/Flash.c:100:31: error: request for member 'byte' in something not a structure or union
  100 |                         buffer.byte[ucNumByte] = data[ucNumWord + ucNumByte];
      |                               ^
../Core/Src/Libraries/Flash.c:103:96: error: request for member 'u64' in something not a structure or union
  103 |                 HAL_FLASH_Program(FLASH_TYPEPROGRAM_DOUBLEWORD, mem_address + ucNumWord, buffer.u64);
      |                                                                                                ^
../Core/Src/Libraries/Flash.c:95:15: warning: variable 'buffer' set but not used [-Wunused-but-set-variable]
   95 |         u64_t buffer;
      |               ^~~~~~
make: *** [Core/Src/Libraries/subdir.mk:28: Core/Src/Libraries/Flash.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.
